--- a/uni.scss
+++ b/uni.scss
@@ -22,6 +22,7 @@ $uni-color-error: #dd524d;
 
 /* 文字基本颜色 */
 $uni-text-color:#333;//基本色
+$uni-text-color-title:#000;//title
 $uni-text-color-inverse:#fff;//反色
 $uni-text-color-grey:#999;//辅助灰色，如加载更多的提示信息
 $uni-text-color-placeholder: #808080;
@@ -46,7 +47,7 @@ $uni-font-size-base:14px;
 $uni-font-size-lg:16;
 
 /* 图片尺寸 */
-$uni-img-size-sm:20px;
+$uni-img-size-sm:16px;
 $uni-img-size-base:26px;
 $uni-img-size-lg:40px;
 
