--- a/styles/global.scss
+++ b/styles/global.scss
@@ -10,3 +10,10 @@
 	-webkit-box-orient:vertical;
 	-webkit-line-clamp:2;
 }
+.card{
+	border: 1px solid #f9f9f9;
+	border-radius: 5px;
+	margin: 12px;
+	padding: 12px;
+	box-shadow: 2px 2px 5px 1px rgba(143,143,143,0.1);
+}
