--- a/uni.scss
+++ b/uni.scss
@@ -66,6 +66,7 @@ $uni-spacing-row-lg: 15px;
 $uni-spacing-col-sm: 4px;
 $uni-spacing-col-base: 8px;
 $uni-spacing-col-lg: 12px;
+$uni-spacing-col-big: 16Lpx;
 
 /* 透明度 */
 $uni-opacity-disabled: 0.3; // 组件禁用态的透明度
