文章详情样式美化

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -26,3 +26,11 @@
 	padding: 12px;
 	box-shadow: 2px 2px 5px 1px rgba(143,143,143,0.1);
 }
+
+//头像样式
+.avatar{
+	width: 32px;
+	height: 32px;
+	border-radius: 50%;
+	border: 2px solid #e5e5e5;
+}
