--- a/uni.scss
+++ b/uni.scss
@@ -72,7 +72,7 @@ $uni-spacing-col-big: 16Lpx;
 $uni-opacity-disabled: 0.3; // 组件禁用态的透明度
 
 /* 文章场景相关 */
-$uni-color-title: #2C405A; // 文章标题颜色
+$uni-color-title: #333333; // 文章标题颜色
 $uni-font-size-title:20px;
 $uni-color-subtitle: #555555; // 二级标题颜色
 $uni-font-size-subtitle:26px;
