--- a/uni.scss
+++ b/uni.scss
@@ -28,6 +28,7 @@ $uni-text-color-grey:#999;//辅助灰色，如加载更多的提示信息
 $uni-text-color-placeholder: #808080;
 $uni-text-color-disable:#c0c0c0;
 $uni-text-color-hot:#f94d2a;
+$uni-text-color-more: #5d83a8;
 
 /* 背景颜色 */
 $uni-bg-color:#ffffff;
